--- a/css/wetkit_ember.styles.css
+++ b/css/wetkit_ember.styles.css
@@ -2,7 +2,7 @@
    Generic elements
    ========================================================================== */
 body {
-  background: white url('../images/spark_bg_tile.png?1377015031');
+  background: white url('../images/spark_bg_tile.png?1377146004');
   color: #555;
   font: normal 84%/1.6em 'Source Sans', Lucida Sans Unicode, Lucida Grande, Segoe UI, sans-serif;
 }
@@ -323,7 +323,7 @@ ul.admin-list {
 }
 
 ul.admin-list li {
-  background: url('../images/list-item.png?1377015031') no-repeat scroll 0 0 transparent;
+  background: url('../images/list-item.png?1377146004') no-repeat scroll 0 0 transparent;
   list-style-image: none;
   list-style-type: none;
   margin: 0 0 1em;
@@ -490,7 +490,7 @@ ul.admin-list.compact li {
 
   /* vertical tabs */
   div.vertical-tabs {
-    background: url('../images/fc.png?1377015031') repeat-y scroll -97px 0 white;
+    background: url('../images/fc.png?1377146004') repeat-y scroll -97px 0 white;
     border: 1px solid #ddd;
   }
 
@@ -1406,36 +1406,12 @@ body div.form-type-checkbox div.description {
 }
 
 .media-widget .button {
-  display: inline-block;
-  font-family: 'Source Sans', Lucida Sans Unicode, Lucida Grande, Segoe UI, sans-serif;
-  font-size: 1.1em;
-  color: #555;
-  background-image: -webkit-linear-gradient(-90deg, #fefefe 0%, #e1e1e1 100%);
-  background-image: -ms-linear-gradient(-90deg, #fefefe 0%, #e1e1e1 100%);
-  background-image: linear-gradient(-90deg, #fefefe 0%, #e1e1e1 100%);
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  cursor: pointer;
-  height: 2.2em;
-  line-height: 2.2em;
-  margin-right: 0.5em;
-  padding: 0 17px;
-  text-align: center;
-}
-
-#media-browser-tabset .tabs {
-  margin-right: 10px;
+  display: block;
 }
 
 /* Media browser */
 #media-browser-tabset #branding {
   padding: 10px 0 0 10px;
-  height: 50px;
-}
-
-#media-browser-tabset #branding h1 {
-  padding: 12px 0 0 12px;
-  text-transform: uppercase;
 }
 
 #media-browser-tabset ul.tabs.primary li {
@@ -1443,17 +1419,12 @@ body div.form-type-checkbox div.description {
   margin-left: .2em;
 }
 
-/* Fixes Media Library select list alignment */
-#media-browser-page div.form-item {
-  margin: 0;
-}
-
 #media-browser-tabset ul.tabs.primary li a:link {
   position: relative;
   top: 1px;
   font-size: 1.2em;
   font-weight: normal;
-  padding: 0em 1em;
+  padding: .5em 1em;
   margin: 0;
   background: rgba(0, 0, 0, 0.06);
   border: 0px solid rgba(0, 0, 0, 0);
@@ -1778,7 +1749,7 @@ ol.task-list li {
 }
 
 ol.task-list li.active {
-  background: transparent url('../images/task-item.png?1377015031') no-repeat 3px 50%;
+  background: transparent url('../images/task-item.png?1377146004') no-repeat 3px 50%;
   /* LTR */
   color: #000;
   padding: 0.5em 1em 0.5em 20px;
@@ -1786,7 +1757,7 @@ ol.task-list li.active {
 }
 
 ol.task-list li.done {
-  background: transparent url('../images/task-check.png?1377015031') no-repeat 0 50%;
+  background: transparent url('../images/task-check.png?1377146004') no-repeat 0 50%;
   color: green;
 }
 
