--- a/sass/ie/ie.scss
+++ b/sass/ie/ie.scss
@@ -1,5 +1,5 @@
 // Import the common includes for all files.
-@import "partials/utility";
+@import "base";
 
 /* IE7 renders legends in nested fieldsets without a width. */
 fieldset legend {
