--- a/sass/wetkit_ember.hacks.scss
+++ b/sass/wetkit_ember.hacks.scss
@@ -28,10 +28,8 @@
 .breadcrumb {
   span {
     font-size: 1.1em;
-    a {
-      color: black;
-    }
   }
+  margin-bottom: 1em;
 }
 
 ul.primary {
