--- a/css/wetkit_ember.hacks.css
+++ b/css/wetkit_ember.hacks.css
@@ -1,26 +1,3 @@
-.breadcrumb-side {
-  float: right;
-  margin-top: 15px;
-}
-.breadcrumb-side ul {
-  margin: 0px;
-  padding: 0px;
-  margin-bottom: 10px;
-}
-.breadcrumb-side ul li {
-  list-style-type: none;
-}
-.breadcrumb-side ul a {
-  font-size: 1.2em;
-  color: white;
-  padding: .5em 0;
-  margin: 0 1em 0 .1em;
-}
-.breadcrumb-side ul a:hover {
-  border-bottom: 4px solid #ffffff;
-  text-decoration: none;
-}
-
 .add-or-remove-shortcuts {
   display: none;
 }
@@ -32,9 +9,6 @@
   font-size: 1.1em;
 }
 
-ul.primary {
-  float: left;
-}
 ul.primary li a:hover {
   border-color: #ffffff;
 }
@@ -45,8 +19,9 @@ ul.primary li.active a:hover {
   border-bottom: 4px solid #ffffff;
 }
 
-#tab-bar {
-  margin-bottom: 15px;
+.tabs.primary {
+  margin: 1em 0 1em 0;
+  padding: 0;
 }
 
 .form-wrapper,
@@ -59,6 +34,6 @@ ul.primary li.active a:hover {
   padding: 2em 2em 0em 2em;
 }
 
-#branding h1.page-title {
-  margin-top: 0.25em;
+div.vertical-tabs .vertical-tabs-panes .vertical-tabs-pane fieldset {
+  padding: 2.5em 1.5em;
 }
