--- a/sass/wetkit_ember.hacks.scss
+++ b/sass/wetkit_ember.hacks.scss
@@ -1,26 +1,3 @@
-.breadcrumb-side {
-  float: right;
-  margin-top: 15px;
-  ul {
-    margin: 0px;
-    padding: 0px;
-    margin-bottom: 10px;
-    li {
-      list-style-type: none;
-    }
-    a {
-      font-size: 1.2em;
-      color: white;
-      padding: .5em 0;
-      margin: 0 1em 0 .1em;
-    }
-    a:hover {
-      border-bottom: 4px solid #ffffff;
-      text-decoration: none;
-    }
-  }
-}
-
 .add-or-remove-shortcuts {
   display: none;
 }
@@ -33,7 +10,6 @@
 }
 
 ul.primary {
-  float: left;
   li {
     a:hover {
       border-color: #ffffff;
@@ -49,8 +25,9 @@ ul.primary {
   }
 }
 
-#tab-bar {
-  margin-bottom: 15px;
+.tabs.primary {
+  margin: 1em 0 1em 0;
+  padding: 0;
 }
 
 .form-wrapper,
@@ -63,6 +40,6 @@ ul.primary {
   padding: 2em 2em 0em 2em;
 }
 
-#branding h1.page-title {
-  margin-top: 0.25em;
+div.vertical-tabs .vertical-tabs-panes .vertical-tabs-pane fieldset {
+  padding: 2.5em 1.5em;
 }
