Update theme to be in sync with Ember theme from spark.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,6 +16,29 @@ body {
 }
 
 /* =============================================================================
+   Form elements
+   ========================================================================== */
+
+/* Exceptions */
+#diff-inline-form select,
+div.filter-options select {
+  padding:0;
+}
+.form-select  {
+  max-width: 300px;
+  background: #fff url("../images/select_sprite.svg");
+  background-repeat: no-repeat;
+  background-position: right center;
+  padding-right: 45px;
+}
+.form-item.form-type-select.form-item-operation {
+ max-width: 300px;
+}
+textarea {
+  height: 200px;
+}
+
+/* =============================================================================
    Skip link
    ========================================================================== */
 
@@ -77,23 +100,49 @@ body {
   // position: fixed;
   width: 100%;
   // z-index: 100;
-  color: $color-text-light;
+  color: $color-text-title;
 }
 #branding h1.page-title {
   margin-top: 0;
   font-size: 2.75em;
   font-weight: 200;
 }
-/**
- * Shortcuts
- */
+
+/* =============================================================================
+   Shortcuts
+   ========================================================================== */
+
 div.add-or-remove-shortcuts {
   float: right;
+  margin-top: -50px;
 }
-.add-or-remove-shortcuts .icon {
-  background: url("shortcut.png") no-repeat scroll 0 0 transparent;
+div.add-or-remove-shortcuts a span.icon {
+  display: block;
+  width: 24px;
+  background: transparent url("../images/no_shortcut.svg") no-repeat scroll 0 0;
+  height: 24px;
+  float: right;
+  margin-left: 8px;
 }
-div.add-or-remove-shortcuts .icon:hover {
+div.add-shortcut a:focus span.icon,
+div.add-shortcut a:hover span.icon {
+  background: transparent url("../images/shortcut.svg") no-repeat scroll 0 0;
+}
+div.remove-shortcut a span.icon {
+  background: transparent url("../images/no_shortcut.svg") no-repeat scroll 0 0;
+}
+div.remove-shortcut a:focus span.icon,
+div.remove-shortcut a:hover span.icon {
+  background: transparent url("../images/no_shortcut.svg") no-repeat scroll 0 0;
+}
+div.add-or-remove-shortcuts a span.text  {
+  padding-top: 8px;
+}
+div.add-or-remove-shortcuts a:focus span.text,
+div.add-or-remove-shortcuts a:hover span.text {
+  background-color: transparent;
+  font-size: .9em;
+  color: $color-text-title;
 }
 
 /* =============================================================================
@@ -140,11 +189,12 @@ ul.primary li a {
   padding: .5em 0;
   margin: 0 1em 0 .1em; /* LTR */
   border:0px solid transparent;
-  color: $color-text-light;
+  color: #ccc;
   vertical-align:text-bottom;
   background: none;
 }
 ul.primary li.active a {
+  color: $color-text-light;
   border-top:0px solid transparent;
   border-right:0px solid transparent;
   border-bottom:4px solid;
@@ -152,11 +202,8 @@ ul.primary li.active a {
   border-left:0px solid transparent;
   background: none;
 }
-ul.primary li a.active:hover {
-  border-bottom: 4px;
-  border-color: $color-link-alternate;
-}
 ul.primary li a:hover {
+  color: $color-text-light;
   background: none;
   border-bottom: 4px solid;
   border-color: $color-link-alternate;
@@ -164,7 +211,7 @@ ul.primary li a:hover {
 ul.secondary {
   margin:0 -3.5em;
   padding:.5em 3.5em;
-  background-color: #777;
+  background-color: #3b3b3b;
   box-shadow: 0px 10px 20px #f5f5f5;
 }
 ul.secondary li {
@@ -325,22 +372,6 @@ tr td:last-child {
 }
 
 /* =============================================================================
-   Form elements
-   ========================================================================== */
-
-/* Exceptions */
-#diff-inline-form select,
-div.filter-options select {
-  padding:0;
-}
-.form-item.form-type-select.form-item-operation {
-float: left;
-}
-textarea {
-  height: 200px;
-}
-
-/* =============================================================================
    Filter
    ========================================================================== */
 
@@ -440,15 +471,19 @@ tr.selected > .dropbutton-widget {
 .exposed-filters .current-filters ul, .exposed-filters .block ul, .exposed-filters .item-list ul {
   margin: 0;
 }
-div.exposed-filters div#edit-actions {
-  float:none;
-}
 div.exposed-filters .container-inline .form-actions, .container-inline.form-actions {
   margin:0;
 }
 .exposed-filters .additional-filters {
-  padding:5px 0 0 0;
+  padding:12px 0 0 0;
   margin-right: 0.2em;
+}
+div.item-list ul.current-filters  {
+  margin: .5em 0;
+}
+ul.current-filters li {
+  margin: 1em 0;
+  display: inline;
 }
 .exposed-filters .form-select {
   margin:0;
@@ -457,6 +492,13 @@ div.exposed-filters .container-inline .form-actions, .container-inline.form-acti
   padding: 0;
   line-height: normal;
   padding-top: .7em;
+}
+div.exposed-filters div#edit-actions {
+  float: left;
+  display: inline-block;
+}
+div.exposed-filters div#edit-actions .form-select {
+  max-width: 300px;
 }
 .container-inline  {
   border:none;
@@ -569,6 +611,13 @@ ul.admin-list.compact li {
     border:2px solid #999;
     padding: 0px;
 }
+img.screenshot  {
+  margin: 0;
+}
+.theme-default h3 {
+  font-weight: normal;
+  color: $color-link-alternate;
+}
 
 /* =============================================================================
    Update status
@@ -655,7 +704,7 @@ legend  {
 }
 .fieldset-wrapper .form-select {
   display: inline-block;
-  margin-right: 1em;
+  margin-right: .5em;
 }
 
 /* =============================================================================
@@ -1624,9 +1673,60 @@ ul#views-display-menu-tabs li {
 #views-ajax-body form {
   margin: 1em 0;
 }
+
+/* =============================================================================
+   messages
+   ========================================================================== */
+
 div.messages {
-  margin-bottom: 1em;
-  background: $color-background;
+  background-position: 8px 8px; /* LTR */
+  background-repeat: no-repeat;
+  border: 1px solid;
+  margin: 6px 0;
+  padding: 10px 10px 10px 40px; /* LTR */
+}
+
+div.status {
+  background-image: url(../images/success.svg);
+  border-color: #ddd;
+  border-left: 4px solid $color-success; /* ltr */
+}
+div.status,
+.ok {
+  color: $color-text;
+}
+div.status,
+table tr.ok {
+  background-color: #fff;
+}
+div.warning {
+  background-image: url(../images/warning.svg);
+  border-color: #ddd;
+  border-left: 4px solid $color-warning; /* ltr */
+}
+div.warning,
+.warning {
+  color: $color-text;
+}
+div.warning,
+table tr.warning {
+  background-color: #fff;
+  border-left: 4px solid $color-warning; /* ltr */
+}
+
+div.error {
+  background-image: url(../images/error.svg);
+  border-color: #ddd;
+  border-left: 4px solid $color-error; /* ltr */
+}
+div.error,
+.error {
+  color: $color-text;
+}
+div.error,
+table tr.error {
+  background-color: #fff;
+  border-left: 4px solid $color-error; /* ltr */
 }
 
 /* =============================================================================
