--- a/css/style.css
+++ b/css/style.css
@@ -245,7 +245,7 @@ table {
 
 th {
   text-transform: uppercase;
-  background: #eeeeee;
+  background: #f9f9f9;
   text-align: left;
 }
 
@@ -1147,7 +1147,32 @@ button[class*="action-item-large"],
 }
 
 body {
-  background: white url('../images/spark_bg_tile.png?1377820873');
+  background: white url('../images/spark_bg_tile.png?1378301358');
+}
+
+/* =============================================================================
+   Form elements
+   ========================================================================== */
+/* Exceptions */
+#diff-inline-form select,
+div.filter-options select {
+  padding: 0;
+}
+
+.form-select {
+  max-width: 300px;
+  background: white url("../images/select_sprite.svg");
+  background-repeat: no-repeat;
+  background-position: right center;
+  padding-right: 45px;
+}
+
+.form-item.form-type-select.form-item-operation {
+  max-width: 300px;
+}
+
+textarea {
+  height: 200px;
 }
 
 /* =============================================================================
@@ -1228,15 +1253,46 @@ body {
   font-weight: 200;
 }
 
-/**
- * Shortcuts
- */
+/* =============================================================================
+   Shortcuts
+   ========================================================================== */
 div.add-or-remove-shortcuts {
   float: right;
+  margin-top: -50px;
 }
 
-.add-or-remove-shortcuts .icon {
-  background: url("shortcut.png") no-repeat scroll 0 0 transparent;
+div.add-or-remove-shortcuts a span.icon {
+  display: block;
+  width: 24px;
+  background: transparent url("../images/no_shortcut.svg") no-repeat scroll 0 0;
+  height: 24px;
+  float: right;
+  margin-left: 8px;
+}
+
+div.add-shortcut a:focus span.icon,
+div.add-shortcut a:hover span.icon {
+  background: transparent url("../images/shortcut.svg") no-repeat scroll 0 0;
+}
+
+div.remove-shortcut a span.icon {
+  background: transparent url("../images/no_shortcut.svg") no-repeat scroll 0 0;
+}
+
+div.remove-shortcut a:focus span.icon,
+div.remove-shortcut a:hover span.icon {
+  background: transparent url("../images/no_shortcut.svg") no-repeat scroll 0 0;
+}
+
+div.add-or-remove-shortcuts a span.text {
+  padding-top: 8px;
+}
+
+div.add-or-remove-shortcuts a:focus span.text,
+div.add-or-remove-shortcuts a:hover span.text {
+  background-color: transparent;
+  font-size: .9em;
+  color: white;
 }
 
 /* =============================================================================
@@ -1288,12 +1344,13 @@ ul.primary li a {
   margin: 0 1em 0 .1em;
   /* LTR */
   border: 0px solid transparent;
-  color: white;
+  color: #ccc;
   vertical-align: text-bottom;
   background: none;
 }
 
 ul.primary li.active a {
+  color: white;
   border-top: 0px solid transparent;
   border-right: 0px solid transparent;
   border-bottom: 4px solid;
@@ -1302,12 +1359,8 @@ ul.primary li.active a {
   background: none;
 }
 
-ul.primary li a.active:hover {
-  border-bottom: 4px;
-  border-color: #f05724;
-}
-
 ul.primary li a:hover {
+  color: white;
   background: none;
   border-bottom: 4px solid;
   border-color: #f05724;
@@ -1316,7 +1369,7 @@ ul.primary li a:hover {
 ul.secondary {
   margin: 0 -3.5em;
   padding: .5em 3.5em;
-  background-color: #777;
+  background-color: #3b3b3b;
   box-shadow: 0px 10px 20px #f5f5f5;
 }
 
@@ -1435,7 +1488,7 @@ table td.active {
 
 table tr.selected td.active,
 table tr.selected td {
-  background: #eeeeee;
+  background: #f9f9f9;
 }
 
 table td ul.inline {
@@ -1499,23 +1552,6 @@ tr.even .form-actions {
 tr td:last-child {
   border-right: none;
   /* LTR */
-}
-
-/* =============================================================================
-   Form elements
-   ========================================================================== */
-/* Exceptions */
-#diff-inline-form select,
-div.filter-options select {
-  padding: 0;
-}
-
-.form-item.form-type-select.form-item-operation {
-  float: left;
-}
-
-textarea {
-  height: 200px;
 }
 
 /* =============================================================================
@@ -1638,17 +1674,22 @@ tr.selected > .dropbutton-widget {
   margin: 0;
 }
 
-div.exposed-filters div#edit-actions {
-  float: none;
-}
-
 div.exposed-filters .container-inline .form-actions, .container-inline.form-actions {
   margin: 0;
 }
 
 .exposed-filters .additional-filters {
-  padding: 5px 0 0 0;
+  padding: 12px 0 0 0;
   margin-right: 0.2em;
+}
+
+div.item-list ul.current-filters {
+  margin: .5em 0;
+}
+
+ul.current-filters li {
+  margin: 1em 0;
+  display: inline;
 }
 
 .exposed-filters .form-select {
@@ -1659,6 +1700,15 @@ div.exposed-filters .container-inline .form-actions, .container-inline.form-acti
   padding: 0;
   line-height: normal;
   padding-top: .7em;
+}
+
+div.exposed-filters div#edit-actions {
+  float: left;
+  display: inline-block;
+}
+
+div.exposed-filters div#edit-actions .form-select {
+  max-width: 300px;
 }
 
 .container-inline {
@@ -1756,7 +1806,7 @@ ul.admin-list {
 }
 
 ul.admin-list li {
-  background: url('../images/list-item.png?1377820873') no-repeat scroll 0 0 transparent;
+  background: url('../images/list-item.png?1378301358') no-repeat scroll 0 0 transparent;
   list-style-image: none;
   list-style-type: none;
   margin: 0 0 1em;
@@ -1791,6 +1841,15 @@ ul.admin-list.compact li {
 .theme-selector .screenshot {
   border: 2px solid #999;
   padding: 0px;
+}
+
+img.screenshot {
+  margin: 0;
+}
+
+.theme-default h3 {
+  font-weight: normal;
+  color: #f05724;
 }
 
 /* =============================================================================
@@ -1863,7 +1922,7 @@ ol.task-list li {
 }
 
 ol.task-list li.active {
-  background: transparent url('../images/task-item.png?1377820873') no-repeat 3px 50%;
+  background: transparent url('../images/task-item.png?1378301358') no-repeat 3px 50%;
   /* LTR */
   color: #000;
   padding: 0.5em 1em 0.5em 20px;
@@ -1871,7 +1930,7 @@ ol.task-list li.active {
 }
 
 ol.task-list li.done {
-  background: transparent url('../images/task-check.png?1377820873') no-repeat 0 50%;
+  background: transparent url('../images/task-check.png?1378301358') no-repeat 0 50%;
   color: green;
 }
 
@@ -1896,7 +1955,7 @@ legend {
 
 .fieldset-wrapper .form-select {
   display: inline-block;
-  margin-right: 1em;
+  margin-right: .5em;
 }
 
 /* =============================================================================
@@ -2653,7 +2712,7 @@ ul#views-display-menu-tabs li {
   margin: 0 .25em 0 0;
   color: #333333;
   text-shadow: none;
-  background-color: #999999;
+  background-color: #3b3b3b;
   border-radius: 3px;
 }
 
@@ -3041,9 +3100,72 @@ ul#views-display-menu-tabs li {
   margin: 1em 0;
 }
 
+/* =============================================================================
+   messages
+   ========================================================================== */
 div.messages {
-  margin-bottom: 1em;
-  background: white;
+  background-position: 8px 8px;
+  /* LTR */
+  background-repeat: no-repeat;
+  border: 1px solid;
+  margin: 6px 0;
+  padding: 10px 10px 10px 40px;
+  /* LTR */
+}
+
+div.status {
+  background-image: url(../images/success.svg);
+  border-color: #ddd;
+  border-left: 4px solid #82bb41;
+  /* ltr */
+}
+
+div.status,
+.ok {
+  color: #333333;
+}
+
+div.status,
+table tr.ok {
+  background-color: #fff;
+}
+
+div.warning {
+  background-image: url(../images/warning.svg);
+  border-color: #ddd;
+  border-left: 4px solid #f79521;
+  /* ltr */
+}
+
+div.warning,
+.warning {
+  color: #333333;
+}
+
+div.warning,
+table tr.warning {
+  background-color: #fff;
+  border-left: 4px solid #f79521;
+  /* ltr */
+}
+
+div.error {
+  background-image: url(../images/error.svg);
+  border-color: #ddd;
+  border-left: 4px solid #cb2026;
+  /* ltr */
+}
+
+div.error,
+.error {
+  color: #333333;
+}
+
+div.error,
+table tr.error {
+  background-color: #fff;
+  border-left: 4px solid #cb2026;
+  /* ltr */
 }
 
 /* =============================================================================
@@ -3168,7 +3290,7 @@ div.admin.my-workbench .right {
 
   /* vertical tabs */
   div.vertical-tabs {
-    background: url('../images/fc.png?1377820873') repeat-y scroll -97px 0 white;
+    background: url('../images/fc.png?1378301358') repeat-y scroll -97px 0 white;
     border: 1px solid #ddd;
   }
 
