--- a/lib/ux_styleguide/core/libraries/_colors.scss
+++ b/lib/ux_styleguide/core/libraries/_colors.scss
@@ -18,7 +18,7 @@ $color-link-alternate: #f05724 !default;
 $color-link-alternate-visited: saturate(shade($color-link-alternate, 20), 50) !default;
 $color-link-alternate-hover: saturate(tint($color-link-alternate, 20), 50) !default;
 $color-background: #fff !default;
-$color-background-alternate: #eee !default;
+$color-background-alternate: #f9f9f9 !default;
 $color-background-dark: #555 !default;
 $color-background-highlight: tint($color-highlight, 90) !default;
 
