--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,7 +1,8 @@
 @import "compass";
 @import "styleguide";
 
-$color-background-medium: #999  !default;
+$color-background-medium: #3b3b3b  !default;
 
 $font-size-small: ms(3) !default;
 $color-icon: #999 !default;
+$color-text-title: #fff;
